@@ -1,9 +1,13 @@
 package com.hanahakdangserver.faq.service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -31,32 +35,45 @@ public class FaqService {
   private final LectureRepository lectureRepository;
   private final UserRepository userRepository;
 
-  @Transactional
-  public FaqResponse createFaq(Long lectureId, FaqRequest request, Long userId) {
-    User user = userRepository.findById(userId)
-        .orElseThrow(USER_NOT_FOUND::createResponseStatusException);
+  private static final int PAGE_SIZE = 3; // 페이지 크기 상수 정의
 
-    Lecture lecture = lectureRepository.findById(lectureId)
-        .orElseThrow(LECTURE_NOT_FOUND::createResponseStatusException);
+  /**
+   * FAQ + Answer를 합쳐서 페이지네이션 처리
+   */
+  public List<FaqResponse> getPaginatedFaqs(Long lectureId, int page) {
+    Pageable pageable = PageRequest.of(page, PAGE_SIZE); // Service에서 Pageable 생성
+    Page<Faq> faqPage = faqRepository.findByLectureId(lectureId, pageable);
 
-    Faq faq = Faq.builder()
-        .lecture(lecture)
-        .content(request.getContent())
-        .build();
-
-    Faq savedFaq = faqRepository.save(faq);
-    return FaqMapper.toDto(savedFaq, List.of());
-  }
-
-  public List<FaqResponse> getFaqsByLectureId(Long lectureId) {
-    List<Faq> faqs = faqRepository.findByLectureId(lectureId);
-
-    return faqs.stream()
+    // FAQ와 답변 데이터를 DTO로 변환
+    return faqPage.stream()
         .map(faq -> {
           List<Answer> answers = answerRepository.findByFaqId(faq.getId());
           return FaqMapper.toDto(faq, answers);
         })
-        .collect(Collectors.toList());
+        .toList();
+  }
+
+  @Transactional
+  public FaqResponse createFaq(Long lectureId, FaqRequest request, Long userId) {
+    // 사용자 조회
+    User user = userRepository.findById(userId)
+        .orElseThrow(USER_NOT_FOUND::createResponseStatusException);
+
+    // 강의 조회
+    Lecture lecture = lectureRepository.findById(lectureId)
+        .orElseThrow(LECTURE_NOT_FOUND::createResponseStatusException);
+
+    // Faq 엔티티 생성 및 저장
+    Faq faq = Faq.builder()
+        .lecture(lecture)
+        .user(user) // user 설정
+        .content(request.getContent())
+        .build();
+
+    Faq savedFaq = faqRepository.save(faq);
+
+    // DTO 변환 후 반환
+    return FaqMapper.toDto(savedFaq, List.of());
   }
 
   @Transactional
@@ -70,5 +87,4 @@ public class FaqService {
 
     faqRepository.delete(faq);
   }
-
 }
